common-applications/infra-test-cluster/hk/openubmc/openubmc-test-website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openubmc
  name: openubmc
