common-applications/infra-test-cluster/hk/openubmc/openubmc-test-website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openubmc-website
  namespace: openubmc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openubmc-website
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: openubmc-website
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      serviceAccount: openubmc
      securityContext:
        seccompProfile:
          type: Localhost
          localhostProfile: infra-seccomp.json
      automountServiceAccountToken: false
      containers:
      - name: websitepod
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openubmc-website:huangshijun-e32fea
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          httpGet:
            scheme: HTTP
            path: /
            port: 3000
            httpHeaders:
            - name: "Host"
              value: "openubmc.test.osinfra.cn"
          timeoutSeconds: 10
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          httpGet:
            scheme: HTTP
            path: /
            port: 3000
            httpHeaders:
            - name: "Host"
              value: "openubmc.test.osinfra.cn"
          timeoutSeconds: 10
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
          capabilities:
            drop:
              - ALL
      volumes:
        - name: token-vol
          projected:
            sources:
            - serviceAccountToken:
                audience: api
                expirationSeconds: 600
                path: token
