common-applications/infra-test-cluster/hk/openubmc/openubmc-test-website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openubmc-website-ingress
  namespace: openubmc
spec:
  rules:
  - host: openubmc.test.osinfra.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openubmc
            port:
              number: 3000
  ingressClassName: nginx
  tls:
  - hosts:
    - openubmc.test.osinfra.cn
    secretName: openubmc-website-tls
